--- a/VRChat/77/1194277.html
+++ b/VRChat/77/1194277.html
@@ -4,26 +4,26 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      【VRchat向け】アシュケ【オキュラスクエスト対応】 - chemical's shop - BOOTH
+      【VRchat向け】アシュケ【Avatar3.0・クエスト対応】 - chemical's shop - BOOTH
     </title>
     <meta name="description" content=
-    "※2019年4月2日更新 blenderで編集する際シェイプキーが読み込まれない問題を解決しました ※2019年6月26日更新 ・肩回りのウェイトの修正 ・メガネ無し版のFBXの追加 ・材質の統合（目と睫毛のMaterialを統合） ※2019年9月2日更新 ・メガネを消すシェイプキー追加 ・ヘッドホンを消すシェイプキー追加 ・首のウェイトの修正 ・quest対応版Unitypackageを同梱 2021年2月1日 利用規約（VRMのやっていい事）に ・VRMが使用できるゲームでの使用 を追加 このアバターはHimiko Avatar">
+    "※2019年4月2日更新 blenderで編集する際シェイプキーが読み込まれない問題を修正しました ※2019年6月26日更新 ・肩回りのウェイトの修正 ・メガネ無し版のFBXの追加 ・材質の統合（目と睫毛のMaterialを統合） ※2019年9月2日更新 ・メガネを消すシェイプキー追加 ・ヘッドホンを消すシェイプキー追加 ・首のウェイトの修正 ・quest対応版Unitypackageを同梱 ※2021年2月1日更新 利用規約（VRMのやっていい事）に ・VRMが使用できるゲームでの使用 を追加 ※2023年10月22日更新 Avatar3.0に対応 このアバターはHimiko">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1194277">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRchat向け】アシュケ【オキュラスクエスト対応】 - chemical's shop - BOOTH">
+    "【VRchat向け】アシュケ【Avatar3.0・クエスト対応】 - chemical's shop - BOOTH">
     <meta name="twitter:description" content=
-    "※2019年4月2日更新 blenderで編集する際シェイプキーが読み込まれない問題を解決しました ※2019年6月26日更新 ・肩回りのウェイトの修正 ・メガネ無し版のFBXの追加 ・材質の統合（目と睫毛のMaterialを統合） ※2019年9月2日更新 ・メガネを消すシェイプキー追加 ・ヘッドホンを消すシェイプキー追加 ・首のウェイトの修正 ・quest対応版Unitypackageを同梱 2021年2月1日 利用規約（VRMのやっていい事）に ・VRMが使用できるゲームでの使用 を追加 このアバターはHimiko Avatar">
+    "※2019年4月2日更新 blenderで編集する際シェイプキーが読み込まれない問題を修正しました ※2019年6月26日更新 ・肩回りのウェイトの修正 ・メガネ無し版のFBXの追加 ・材質の統合（目と睫毛のMaterialを統合） ※2019年9月2日更新 ・メガネを消すシェイプキー追加 ・ヘッドホンを消すシェイプキー追加 ・首のウェイトの修正 ・quest対応版Unitypackageを同梱 ※2021年2月1日更新 利用規約（VRMのやっていい事）に ・VRMが使用できるゲームでの使用 を追加 ※2023年10月22日更新 Avatar3.0に対応 このアバターはHimiko">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1194277/48d1aa17-c2f2-448c-8d03-8f8a3ac0a5e0_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRchat向け】アシュケ【オキュラスクエスト対応】 - chemical's shop - BOOTH">
+    "【VRchat向け】アシュケ【Avatar3.0・クエスト対応】 - chemical's shop - BOOTH">
     <meta property="og:description" content=
-    "※2019年4月2日更新 blenderで編集する際シェイプキーが読み込まれない問題を解決しました ※2019年6月26日更新 ・肩回りのウェイトの修正 ・メガネ無し版のFBXの追加 ・材質の統合（目と睫毛のMaterialを統合） ※2019年9月2日更新 ・メガネを消すシェイプキー追加 ・ヘッドホンを消すシェイプキー追加 ・首のウェイトの修正 ・quest対応版Unitypackageを同梱 2021年2月1日 利用規約（VRMのやっていい事）に ・VRMが使用できるゲームでの使用 を追加 このアバターはHimiko Avatar">
+    "※2019年4月2日更新 blenderで編集する際シェイプキーが読み込まれない問題を修正しました ※2019年6月26日更新 ・肩回りのウェイトの修正 ・メガネ無し版のFBXの追加 ・材質の統合（目と睫毛のMaterialを統合） ※2019年9月2日更新 ・メガネを消すシェイプキー追加 ・ヘッドホンを消すシェイプキー追加 ・首のウェイトの修正 ・quest対応版Unitypackageを同梱 ※2021年2月1日更新 利用規約（VRMのやっていい事）に ・VRMが使用できるゲームでの使用 を追加 ※2023年10月22日更新 Avatar3.0に対応 このアバターはHimiko">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1194277/48d1aa17-c2f2-448c-8d03-8f8a3ac0a5e0_base_resized.jpg">
     <meta property="og:url" content=
@@ -79,11 +79,11 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
+    "https://asset.booth.pm/assets/14f10d23ffa1b8daf619.js" defer=
     "defer" nonce=
-    "3qofXLzLt66Q8Fonll/pNMm9dlR2X7gIuMzn+DTaadc="></script>
+    "b+LehvFwh4QKf+VoPivg2JvNkflmc3CZ+5U2K5u4x+s="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"【VRchat向け】アシュケ【オキュラスクエスト対応】","description":"※2019年4月2日更新\nblenderで編集する際シェイプキーが読み込まれない問題を解決しました\n\n※2019年6月26日更新\n・肩回りのウェイトの修正\n・メガネ無し版のFBXの追加\n・材質の統合（目と睫毛のMaterialを統合）\n\n※2019年9月2日更新\n・メガネを消すシェイプキー追加\n・ヘッドホンを消すシェイプキー追加\n・首のウェイトの修正\n・quest対応版Unitypackageを同梱\n\n2021年2月1日\n利用規約（VRMのやっていい事）に\n・VRMが使用できるゲームでの使用\nを追加\n\n\nこのアバターはHimiko Avatar World(publicワールド)にて試着できるようになっております。\n\nVRchat用のモデルとなります。\n\n■入っている物\n・Materialセットアップ済のモデル\n・セットアップ済みprefab（ヘッドホンあり版・ヘッドホン無し版・ヘッドホン眼鏡無し版・メガネ無し版の4種類）\n・表情ファイル\n・体のワイヤーフレーム画像\n\n※色は2パターン入っています。\n\n■中身\n・unityPackage形式となっています\n\n●禁則事項(VRChat用アバターモデル)\n・モデル再配布（改造・未改造問わず）\n※アバターペデスタルへの使用も再配布にあたります\n・政治的利用\n・他者を侮辱するような利用\n・他人を不快にさせる行為\n・本商品に含まれるデータを元にした商品を作る事\n・その他製作者が不適切と判断したもの\n※上記の規約は予告なく変更する場合があります\n\n●やっていい事(VRChat用アバターモデル)\n・VRchatでの使用\n・VRchatを使用した生放送の出演・撮影など\n・改変\n※改変をした後のモデルも「アシュケ」とし、本規約に従ってください。\n\n●禁則事項(VRM)\n・再配布（改造・未改造問わず）\n・アップロード者以外が使える設定でアップロードする事も再配布にあたります。\n・政治的利用\n・他者を侮辱するような利用\n・他人を不快にさせる行為\n・本商品に含まれるデータを元にした商品を作る事\n・その他製作者が不適切と判断したもの\n※上記の規約は予告なく変更する場合があります\n\n●やっていい事(VRM)\n・VRMが使用できるサービスでの使用\n・VRMが使用できるゲームでの使用\n・本商品を使用した放送の出演・撮影など\n・改変\n※改変をした後のモデルも「アシュケ」とし、本規約に従ってください。\n\n※このモデルには、@reflex_1124　様作　Reflex Shader（配布先：https://booth.pm/ja/items/1088971）が利用されています。","url":"https://booth.pm/ja/items/1194277","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1300"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1194277/48d1aa17-c2f2-448c-8d03-8f8a3ac0a5e0_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"【VRchat向け】アシュケ【Avatar3.0・クエスト対応】","description":"※2019年4月2日更新\nblenderで編集する際シェイプキーが読み込まれない問題を修正しました\n\n※2019年6月26日更新\n・肩回りのウェイトの修正\n・メガネ無し版のFBXの追加\n・材質の統合（目と睫毛のMaterialを統合）\n\n※2019年9月2日更新\n・メガネを消すシェイプキー追加\n・ヘッドホンを消すシェイプキー追加\n・首のウェイトの修正\n・quest対応版Unitypackageを同梱\n\n※2021年2月1日更新\n利用規約（VRMのやっていい事）に\n・VRMが使用できるゲームでの使用\nを追加\n\n※2023年10月22日更新\nAvatar3.0に対応\n\nこのアバターはHimiko Avatar World(publicワールド)にて試着できるようになっております。\n\nVRchat用のモデルとなります。\n\n■入っている物\n・アシュケ.unitypackage\nAvatars3.0のPC版のアバターが入ったファイルとなっております。\n※Avatar3.0版のSDKを入れたプロジェクトでお使いください\n\n・アシュケVRM.vrm\nVRMファイルとなっております。\n利用規約に沿ってお使いください。\n\n・ワイヤーフレーム.png\nUV展開図の画像となっております。\n改変の際にお使いください\n\n・Model.fbx\n3Dモデルとなっております\n改変の際にお使いください\n\n・textureフォルダー\nテクスチャが入っているフォルダーとなっております\n\n\n■使い方（PCで使う場合）\n1．VRChatSDK3-Avatars（アバター用のVRChatSDK）と 【無料】lilToon （配布先： https://lilxyzw.booth.pm/items/3087170 ）をプロジェクトにインポートします。\n2．本製品のUnitypackage（アシュケ.Unitypackage）をインポートします。\n\n本製品のsceneファイル（ユニティのアイコンのファイル）にMaterialセットアップ済のモデルが入っています。\nアップロードしてお使いください。\n\n※クエスト版と同じBlueprintID（アバターのID）でアップロードしないとクエストからと同一アバターとして認識されません。\n（参考画像.pngも参考にしてください）\n\n■使い方（クエストで使う場合）\n1．プロジェクトのビルド設定をandroidに変更します\n2．VRChatSDK3-Avatars（アバター用のVRChatSDK）とアシュケ.Unitypackageをインポートします。\n\n本製品のsceneファイル（ユニティのアイコンのファイル）にMaterialセットアップ済のモデルが入っています。\nアップロードしてお使いください。\n\n※PC版と同じBlueprintID（アバターのID）でアップロードしないとクエストからと同一アバターとして認識されません。\n（参考画像.pngも参考にしてください）\n\n●禁則事項(VRChat用アバターモデル)\n・モデル再配布（改造・未改造問わず）\n※アバターペデスタルへの使用も再配布にあたります\n・政治的利用\n・他者を侮辱するような利用\n・他人を不快にさせる行為\n・本商品に含まれるデータを元にした商品を作る事\n・その他製作者が不適切と判断したもの\n※上記の規約は予告なく変更する場合があります\n\n●やっていい事(VRChat用アバターモデル)\n・VRchatでの使用\n・VRchatを使用した生放送の出演・撮影など\n・改変\n※改変をした後のモデルも「アシュケ」とし、本規約に従ってください。\n\n●禁則事項(VRM)\n・再配布（改造・未改造問わず）\n・アップロード者以外が使える設定でアップロードする事も再配布にあたります。\n・政治的利用\n・他者を侮辱するような利用\n・他人を不快にさせる行為\n・本商品に含まれるデータを元にした商品を作る事\n・その他製作者が不適切と判断したもの\n※上記の規約は予告なく変更する場合があります\n\n●やっていい事(VRM)\n・VRMが使用できるサービスでの使用\n・VRMが使用できるゲームでの使用\n・本商品を使用した放送の出演・撮影など\n・改変\n\n※改変をした後のモデルも「アシュケ」とし、本規約に従ってください。","url":"https://booth.pm/ja/items/1194277","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1194277/48d1aa17-c2f2-448c-8d03-8f8a3ac0a5e0_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -105,7 +105,7 @@
         <div class="market" data-ga-tracking-id=""
         data-product-brand="chemical15" data-product-category="208"
         data-product-id="1194277" data-product-list="market_show"
-        data-product-price="1300" data-tracking="detail_item" id=
+        data-product-price="1500" data-tracking="detail_item" id=
         "items">
           <div class="market"></div>
           <div data-page-type="market" id="js-item"></div>
@@ -147,7 +147,7 @@
                             shop</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
-                              【VRchat向け】アシュケ【オキュラスクエスト対応】
+                              【VRchat向け】アシュケ【Avatar3.0・クエスト対応】
                             </h2>
                             <div class="flex items-start mt-8">
                               <div class="mr-auto">
@@ -178,7 +178,7 @@
                                     </div>
                                     <div class=
                                     "variation-price u-text-right">
-                                      ¥ 1,300
+                                      ¥ 1,500
                                     </div>
                                   </div>
                                   <div class="variation-cart">
@@ -199,7 +199,7 @@
                                         "off"><button class=
                                         "add-gift flex justify-center box-border items-center cursor-pointer text-text-default shop-theme-text-text border border-border600 shop-theme-border-text bg-white shop-theme-bg-contents w-full mt-8 py-16 text-center"
                                         data-product-id="1194277"
-                                        data-product-price="1300"
+                                        data-product-price="1500"
                                         data-product-brand=
                                         "chemical15"
                                         data-product-category="208"
@@ -225,7 +225,7 @@
                                           <button class=
                                           "add-gift flex justify-center box-border items-center cursor-pointer text-text-default shop-theme-text-text border border-border600 shop-theme-border-text bg-white shop-theme-bg-contents w-full mt-8 py-16 text-center"
                                           data-product-id="1194277"
-                                          data-product-price="1300"
+                                          data-product-price="1500"
                                           data-product-brand=
                                           "chemical15"
                                           data-product-category=
@@ -280,7 +280,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRchat向け】アシュケ【オキュラスクエスト対応】"
+                            <img alt=
+                            "【VRchat向け】アシュケ【Avatar3.0・クエスト対応】"
                             class="market-item-detail-item-image"
                             data-origin=
                             "https://booth.pximg.net/9585a184-fff0-488e-8a9d-612c758951c2/i/1194277/48d1aa17-c2f2-448c-8d03-8f8a3ac0a5e0.png"
@@ -291,7 +292,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRchat向け】アシュケ【オキュラスクエスト対応】"
+                            <img alt=
+                            "【VRchat向け】アシュケ【Avatar3.0・クエスト対応】"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/9585a184-fff0-488e-8a9d-612c758951c2/i/1194277/27f99132-ebdf-40a4-8a88-7f241e8103f8_base_resized.jpg"
@@ -302,7 +304,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRchat向け】アシュケ【オキュラスクエスト対応】"
+                            <img alt=
+                            "【VRchat向け】アシュケ【Avatar3.0・クエスト対応】"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/9585a184-fff0-488e-8a9d-612c758951c2/i/1194277/f8290149-1776-4259-9b3f-55086cdb7e18_base_resized.jpg"
@@ -336,20 +339,41 @@
                           <p class=
                           "autolink break-words font-noto-sans typography-16 whitespace-pre-line">
                             ※2019年4月2日更新
-                            blenderで編集する際シェイプキーが読み込まれない問題を解決しました
+                            blenderで編集する際シェイプキーが読み込まれない問題を修正しました
                             ※2019年6月26日更新 ・肩回りのウェイトの修正
                             ・メガネ無し版のFBXの追加 ・材質の統合（目と睫毛のMaterialを統合）
                             ※2019年9月2日更新 ・メガネを消すシェイプキー追加
                             ・ヘッドホンを消すシェイプキー追加 ・首のウェイトの修正
-                            ・quest対応版Unitypackageを同梱 2021年2月1日
+                            ・quest対応版Unitypackageを同梱 ※2021年2月1日更新
                             利用規約（VRMのやっていい事）に ・VRMが使用できるゲームでの使用 を追加
+                            ※2023年10月22日更新 Avatar3.0に対応
                             このアバターはHimiko Avatar
                             World(publicワールド)にて試着できるようになっております。
                             VRchat用のモデルとなります。 ■入っている物
-                            ・Materialセットアップ済のモデル
-                            ・セットアップ済みprefab（ヘッドホンあり版・ヘッドホン無し版・ヘッドホン眼鏡無し版・メガネ無し版の4種類）
-                            ・表情ファイル ・体のワイヤーフレーム画像 ※色は2パターン入っています。
-                            ■中身 ・unityPackage形式となっています
+                            ・アシュケ.unitypackage
+                            Avatars3.0のPC版のアバターが入ったファイルとなっております。
+                            ※Avatar3.0版のSDKを入れたプロジェクトでお使いください
+                            ・アシュケVRM.vrm VRMファイルとなっております。
+                            利用規約に沿ってお使いください。 ・ワイヤーフレーム.png
+                            UV展開図の画像となっております。 改変の際にお使いください
+                            ・Model.fbx 3Dモデルとなっております 改変の際にお使いください
+                            ・textureフォルダー テクスチャが入っているフォルダーとなっております
+                            ■使い方（PCで使う場合）
+                            1．VRChatSDK3-Avatars（アバター用のVRChatSDK）と
+                            【無料】lilToon （配布先：
+                            https://lilxyzw.booth.pm/items/3087170
+                            ）をプロジェクトにインポートします。
+                            2．本製品のUnitypackage（アシュケ.Unitypackage）をインポートします。
+                            本製品のsceneファイル（ユニティのアイコンのファイル）にMaterialセットアップ済のモデルが入っています。
+                            アップロードしてお使いください。
+                            ※クエスト版と同じBlueprintID（アバターのID）でアップロードしないとクエストからと同一アバターとして認識されません。
+                            （参考画像.pngも参考にしてください） ■使い方（クエストで使う場合）
+                            1．プロジェクトのビルド設定をandroidに変更します
+                            2．VRChatSDK3-Avatars（アバター用のVRChatSDK）とアシュケ.Unitypackageをインポートします。
+                            本製品のsceneファイル（ユニティのアイコンのファイル）にMaterialセットアップ済のモデルが入っています。
+                            アップロードしてお使いください。
+                            ※PC版と同じBlueprintID（アバターのID）でアップロードしないとクエストからと同一アバターとして認識されません。
+                            （参考画像.pngも参考にしてください）
                             ●禁則事項(VRChat用アバターモデル)
                             ・モデル再配布（改造・未改造問わず）
                             ※アバターペデスタルへの使用も再配布にあたります ・政治的利用
@@ -369,8 +393,6 @@
                             ・VRMが使用できるサービスでの使用 ・VRMが使用できるゲームでの使用
                             ・本商品を使用した放送の出演・撮影など ・改変
                             ※改変をした後のモデルも「アシュケ」とし、本規約に従ってください。
-                            ※このモデルには、@reflex_1124　様作　Reflex
-                            Shader（配布先：https://booth.pm/ja/items/1088971）が利用されています。
                           </p>
                         </div>
                       </section>
@@ -587,7 +609,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;}]"
+    "[{&quot;label&quot;:&quot;SC2023 Autumn&quot;,&quot;value&quot;:&quot;sc2023autumn&quot;},{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
