--- a/VRChat/24/1175024.html
+++ b/VRChat/24/1175024.html
@@ -75,38 +75,13 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-  </head>
-  <body>
-    <div class="mini-player-controller" style="display: none;">
-      <a class="scroller" data-smooth-scroll="true"><img class=
-      "mini-player-controller__image" src=
-      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
-      data-smooth-scroll="true">
-      <div class="mini-player-information__item-name"></div>
-      <div class="mini-player-information__shop-name"></div>
-      <div class="mini-player-information__navigation">
-        試聴中の商品へスクロール
-      </div></a>
-      <div class="mini-player-controls">
-        <div class="mini-player-mode-ui">
-          <div class="mini-player-mode-ui__knob"></div>
-          <div class="mini-player-mode-ui__short">
-            15秒
-          </div>
-          <div class="mini-player-mode-ui__full">
-            フル
-          </div>
-        </div>
-        <div class="mini-player-play-ui"></div>
-      </div>
-    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
+    "https://asset.booth.pm/assets/14f10d23ffa1b8daf619.js" defer=
     "defer" nonce=
-    "epvykPB+g9xHNDbfRfniHSHioRI9yMXg5Ntr/ab7hg8="></script>
+    "ka1hsnkI3+CkdnChm3a1SMv8Op5MZUyQsETy00gwrpM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【素体付き】VRchat想定　オリジナル3Dモデル　ムスカリ","description":"Humanoid形式のオリジナル3Dモデルです。\n主にVRchatでの使用を想定していますが、MMDやゲーム類にもご利用いただけます。\n改変をしないのであれば、VRchatにすぐにアップロードできます。\n\n概要\n\n身長　ブーツ込み・151cm　　素体　146cm\n\nポリゴン数\n・フル状態（手袋の下など、見えない所を削除していない状態）\n　△22870\n\n・VRchatでの使用想定時のポリゴン数（見えない所を削除した状態）\n　△18037\n\n対応\nHumanoid\nリップシンク\n自動まばたき\nフルトラッキング\n・肩辺りの挙動はHMDのみよりフルトラッキングのほうが綺麗に動きます。\n・アイトラッキング\n\n\n\n内容物\n\nセットアップ済みUnity package\n表情アニメーションはUnity Packageに同梱されています。\n\nFBX形式のモデルファイル２つ\n\nblender形式のモデルファイル２つ\n・ムスカリ本体\n・ムスカリ素体\n\nテクスチャファイル\n・PNG形式２枚\n・clip studio形式２つ\n・PSD形式２つ\n\n紹介画像４枚\n導入改変方法の解説画像４枚\n\nreadme.txt\n\nシェーダーはユニティちゃんシェーダー（UTS2 v.2.0.7.5）\n自動まばたきには、くらげのBooth様よりBehaviour-Enabledを同梱させて頂きました。\n感謝申し上げます。\n\n\n\n導入方法(VRchat用)\n1.Unity 2018.4.20f1で新規プロジェクトを作成\n\n2.VRC SDKとDynamic Bone（有料）をインポート\n\n3.muscari unity packageをインポート\n\n4.Muscari-Unity 2018.4.20f1をダブルクリック\n\n5.VRchat SDK→Show Build Control Panel→Build\u0026Publish\n　Avatar Nameにわかりやすい名を入れUpload\n\n詳しくは同梱の導入改変方法フォルダの画像を参照してください。\n\n\n\n利用規約\n当データを購入した時点で規約に同意したものとみなします。\n当モデル、改造モデル、テクスチャの著作権はtoshiziに帰属します。\n当モデルの使用につき、何らかのトラブルや損失・損害等につきましてはtoshiziは一切責任を負わないものとします。\n\n\n可能事項\n・モデルを改造しての使用\n　他アバターが改変可であれば、本モデルの一部、衣装や髪だけを移植しての使用も可\n・ゲーム作成\n・商用利用\n　3Dモデルを使用する場合、簡単にデータを抽出できない形に限り可\n・ムスカリ素体を元に作成した衣装の販売\n　衣装の3Dモデルデータおよびテクスチャデータの著作権は、その製作者のものとする\n・R18/R18G作品への使用\n・MMDやvirtualcast、バーチャルyoutuber活動（収益化含む）等、映像での使用・配信・映り込み\n\n\n禁止事項\n・toshiziが著作権を保持する当モデルの再配布、無断での販売\n　購入者による上記「商用利用」は再配布、販売に該当しないため可\n・VRchatでのアバターペデスタルへの使用\n・公序良俗に反する行為（素体モデルを全裸のままアップロード等）\n　政治、宗教活動、他者に対する誹謗中傷目的での使用\n\n\n\n更新履歴\nVer1.03 アイトラッキングに対応、メッシュ、シェーダーを調整\nVer1.02 テクスチャにPSD形式ファイルを追加\nVer1.01\t利用規約を更新\n\n何かあればこちらまで\nhttps://twitter.com/toshizi_hone","url":"https://booth.pm/ja/items/1175024","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/b4d32ad4-2d90-4f9a-b2c6-95372fd3bff8/i/1175024/4c21b7b9-8575-430c-ab7e-eedc5943c67d_base_resized.jpg"}
     </script>
@@ -114,6 +89,8 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
+  </head>
+  <body>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -628,7 +605,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;}]"
+    "[{&quot;label&quot;:&quot;SC2023 Autumn&quot;,&quot;value&quot;:&quot;sc2023autumn&quot;},{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
